crates/analyzer/tests/snapshots/errors__ctx_undefined_event.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `YouWin` expects 2 arguments, but 1 was provided
  ┌─ compile_errors/ctx_undefined_event.fe:7:14
  │
7 │         emit YouWin(amount: 42)
  │              ^^^^^^ ---------- supplied 1 argument
  │              │       
  │              expects 2 arguments

error: argument label mismatch
  ┌─ compile_errors/ctx_undefined_event.fe:7:21
  │
7 │         emit YouWin(amount: 42)
  │                     ^^^^^^ expected `ctx`
  │
  = Note: arguments must be provided in order.

error: incorrect type for `YouWin` argument `ctx`
  ┌─ compile_errors/ctx_undefined_event.fe:7:29
  │
7 │         emit YouWin(amount: 42)
  │                             ^^ this has type `u256`; expected type `Context`


